--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "Create a Social Network API using NoSql",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index",
+    "seed": "node utils/seed"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "mongoose": "^7.0.2"
   },
   "author": "",
   "license": "ISC"
